[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = ["Mikhail Sugakov <sugakov.mikhail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.5.2"
apscheduler = "^3.6.3"
logzero = "^1.5.0"
aiohttp = "^3.6.2"

# A great list of linters and safety checkers for python
# https://github.com/vintasoftware/python-linters-and-code-analysis

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pylama = "^7.7.1"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
invoke = "^1.4.1"
pytest-watch = "^4.2.0"
rope = "^0.16.0"
safety = "^1.8.7"
bandit = "^1.6.2"

[tool.black]
line-length = 100
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
